--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,21 @@
 services:
+  server:
+    build: ./server
+    container_name: pollserver
+    ports:
+      - "5000:5000"
+    depends_on:
+      - db
+  client:
+    build: ./client
+    container_name: pollclient
+    ports:
+      - "3000:3000"
+    environment:
+      - NEXT_PUBLIC_SERVER_URL=http://pollserver:5000
+    depends_on:
+      - server
+      - db
   db:
     image: postgres:15-alpine
     container_name: polldb
