--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
         "express": "^4.21.2",
         "jsonwebtoken": "^9.0.2",
         "nodemailer": "^6.10.0",
+        "nodemon": "^3.1.11",
         "pg": "^8.14.1",
         "server": "file:"
     }
